--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server",
+    "serve": "node dev-server.js",
     "lint": "eslint src/*.js"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "react-dom": "^15.4.2",
@@ -26,7 +27,8 @@
     "tsd": "^0.6.5",
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "react": "^15.4.2"
