--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,7 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "dist",
-    "types": [
-        // add node as an option
-        "node"
-      ],
-      // typeRoots option has been previously configured
-      "typeRoots": [
-        // add path to @types
-        "node_modules/@types"
-      ]
+    "outDir": "dist"
   },
 
   "exclude": [
