--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "react-dom": "^15.4.2",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "tsd": "^0.6.5",
@@ -30,6 +31,8 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   }
 }
