--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "serve": "node dev-server.js",
+    "start": "node dev-server.js",
     "lint": "eslint src/*.js",
     "e2e": "protractor ./e2e.config.js",
     "e2e:serve": "webdriver-manager start"
@@ -51,6 +51,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-materialize": "^0.18.1",
-    "react-router": "^3.0.2"
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0"
   }
 }
