--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-materialize": "^0.18.1",
+    "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0"
