--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   }
 }
