--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
     "materialize-css": "^0.98.0",
     "react": "^15.4.2",
