--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "firebase": "^3.7.4",
     "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
