--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "extends": "airbnb",
     "env": {
-        "browser": 1
+        "browser": true
     },
     "plugins": [
         "react",
