--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.4"
   }
 }
