Style login button

--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "google-client-api": "^1.0.4",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-icons": "^2.2.4",
     "react-materialize": "^0.18.1",
     "react-onclickoutside": "^5.10.0",
     "react-redux": "^5.0.3",
