--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "material-ui": "^0.17.1",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
+    "react-avatar": "^2.3.0",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.4",
     "react-materialize": "^0.18.1",
