Replace TextField with content editable div

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-avatar": "^2.3.0",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.4",
     "react-materialize": "^0.18.1",
