--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "general-tutorial",
+  "name": "quick-note",
   "version": "1.0.0",
-  "description": "Project constantly developed when new skills are gained",
+  "description": "Google Keep like notes application",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
