--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Project constantly developed when new skills are gained",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "node dev-server.js",
+    "start": "webpack-dev-server --mode development --hot --progress --color --port 9000 --open",
+    "build": "webpack -p --progress --colors",
     "lint": "eslint src/*.js",
     "e2e": "protractor ./e2e.config.js",
     "e2e:serve": "webdriver-manager start"
@@ -13,57 +13,58 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^15.0.10",
-    "@types/react-dom": "^0.14.23",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.10.0",
-    "firebase": "^3.7.4",
-    "font-awesome-webpack": "0.0.4",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.28.0",
-    "jasmine": "^2.5.3",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.4.1",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "less": "^2.7.2",
-    "protractor": "^5.1.1",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "firebase": "^5.3.0",
+    "font-awesome-webpack": "0.0.5-beta.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "less": "^3.8.0",
+    "protractor": "^5.4.0",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
     "tsd": "^0.6.5",
-    "typescript": "^2.1.6",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "typescript": "^2.9.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "google-client-api": "^1.0.4",
-    "lodash": "^4.17.4",
-    "material-ui": "^0.17.1",
-    "prop-types": "^15.5.8",
-    "react": "^15.4.2",
-    "react-avatar": "^2.3.0",
-    "react-contenteditable": "^2.0.2",
-    "react-dom": "^15.4.2",
-    "react-icons": "^2.2.4",
-    "react-materialize": "^0.18.1",
-    "react-onclickoutside": "^5.10.0",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-saga": "^0.14.4"
+    "lodash": "^4.17.10",
+    "material-ui": "^0.20.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-avatar": "^3.1.2",
+    "react-contenteditable": "^2.1.0",
+    "react-dom": "^16.4.1",
+    "react-icons": "^2.2.7",
+    "react-materialize": "^2.3.3",
+    "react-onclickoutside": "^6.7.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.2.1",
+    "react-router-dom": "^4.3.1",
+    "react-tap-event-plugin": "^3.0.3",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   }
 }
